--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,3 +1,41 @@
+* {
+    margin: 0px;
+    padding: 0px;
+}
+body {
+    height: 100;
+    background-color: blanchedalmond;
+}
+h1 {
+    text-align: center;
+    color: darkslategray;
+    background-color: rgb(247, 203, 133);
+    font-size: 48px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 10px 5px;
+    margin: 0px;
+}
+.back-1 {
+    color: darkslategray;
+    background-color: blanchedalmond;
+    font-size: 24px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 10px 5px;
+    margin: 0px;
+}
+.back-2 {
+    color: darkslategray;
+    background-color: rgb(240, 217, 183);
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 10px 5px;
+    margin: 0px;
+}
+
+ul.back-2 {
+    padding: 10px 25px;
+}
+
 
 /* Student Table Styles */
 table {
