Money klases rezultāta izvade

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -19,6 +19,12 @@
         <li>Fishing</li>
         <li>Draughts</li>
     </ul>
-
+    <h3 class="back-1", id="forum"> Send your Hobbie here!</h3>
+    <form method="get">
+        <input type="number" name="id">
+        <input type="text" name="title">
+        <input type="text" name="description">
+        <input type="submit" class="btn">
+    </form>
 </body>
 </html>
