--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,4 +1,5 @@
 * {
+    font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
     padding: 0px;
 }
@@ -11,7 +12,6 @@ h1 {
     color: darkslategray;
     background-color: rgb(247, 203, 133);
     font-size: 48px;
-    font-family: Arial, Helvetica, sans-serif;
     padding: 10px 5px;
     margin: 0px;
 }
@@ -19,7 +19,6 @@ h1 {
     color: darkslategray;
     background-color: blanchedalmond;
     font-size: 24px;
-    font-family: Arial, Helvetica, sans-serif;
     padding: 10px 5px;
     margin: 0px;
 }
@@ -55,4 +54,30 @@ th {
 
 tr:hover {
   background-color: #f5f5f5;
+}
+
+input {
+    padding: 10px;
+    margin-top: 20px;
+    display: block;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+#forum {
+    text-align: center;
+}
+
+.btn {
+    background-color: #00FA9A;
+    color: #ffffff;
+    padding: 10px 40px;
+    border-radius: 10px;
+    border: none;
+    font-size: 20px;
+}
+
+.btn:hover {
+    background-color: #0ac47d;
 }
