--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project</title>
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
-    <script src="/js/main.js"></script>
+    <title>Test</title>
 </head>
 <body>
-    <h1>First website</h1>
+    <h1 th:text="${result}"></h1>
 </body>
 </html>
