--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -2,6 +2,7 @@
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
     padding: 0px;
+    border: none;
 }
 body {
     height: 100;
@@ -57,8 +58,40 @@ tr:hover {
 }
 
 input {
+    border: solid;
+    border-color: rgb(247, 203, 133);
     padding: 10px;
-    margin-top: 20px;
+    display: block;
+    text-align: center;
+    font-size: 18px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+select {
+    border: solid;
+    border-color: rgb(247, 203, 133);
+    padding: 10px 82px;
+    display: block;
+    text-align: center;
+    font-size: 18px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+option {
+    text-align: left;
+}
+
+*:focus {
+    outline: none;
+}
+
+label{
+    color: darkslategray;
+    padding: 10px;
+    font-size: 20px;
+    margin-top: 5px;
     display: block;
     text-align: center;
     margin-right: auto;
@@ -70,14 +103,27 @@ input {
 }
 
 .btn {
-    background-color: #00FA9A;
-    color: #ffffff;
-    padding: 10px 40px;
+    margin-top: 10px;
+    background-color: #f3a27c;
+    color: white;
+    padding: 10px 60px;
     border-radius: 10px;
     border: none;
     font-size: 20px;
 }
 
 .btn:hover {
-    background-color: #0ac47d;
+    background-color: #af7459;
 }
+
+.center-text {
+    text-align: center;
+}
+
+.output {
+    margin: 15px 0px;
+    font-size: 30px;
+    color: darkslategray;
+}
+
+
