--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -7,6 +7,7 @@
     <title>Test</title>
 </head>
 <body>
-    <h1 th:text="${result}"></h1>
+    <h1>This is test page!</h1>
+    <h2 th:text="${result}" class="center-text output"></h2>
 </body>
 </html>
